@@ -1,3 +1,8 @@
+2010-02-11  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclIOCmd.c (Tcl_OpenObjCmd): [Bug 2949740]: Make sure that
+	we do not try to put a NULL pipeline channel into binary mode.
+
 2010-02-07  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* tools/genStubs.tcl     Backport various formatting (spacing)
